// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BindingEditor > スナップショット > バインディングありの基本レンダリング 1`] = `
<div
  class="_container_9cd356"
>
  <div
    class="_header_9cd356"
  >
    <h2
      class="_title_9cd356"
    >
      キーバインディング
    </h2>
    <div
      class="_container_e815f2"
    >
      <span
        class="_label_e815f2"
      >
        Vim mode:
      </span>
      <div
        class="_tabs_e815f2"
      >
        <button
          class="_tab_e815f2 _tabActive_e815f2"
          title="Normal"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            N
          </span>
          <span
            class="_full_e815f2"
          >
            Normal
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Visual"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            V
          </span>
          <span
            class="_full_e815f2"
          >
            Visual
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Op-pending"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            O
          </span>
          <span
            class="_full_e815f2"
          >
            Op-pending
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Insert"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            I
          </span>
          <span
            class="_full_e815f2"
          >
            Insert
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Command-line"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            C
          </span>
          <span
            class="_full_e815f2"
          >
            Command-line
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Select"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            S
          </span>
          <span
            class="_full_e815f2"
          >
            Select
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Terminal"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            T
          </span>
          <span
            class="_full_e815f2"
          >
            Terminal
          </span>
        </button>
      </div>
    </div>
  </div>
  <table
    class="_table_9cd356"
  >
    <thead>
      <tr
        class="_headerRow_9cd356"
      >
        <th
          class="_thKey_9cd356"
        >
          キー
        </th>
        <th
          class="_thName_9cd356"
        >
          コマンド名
        </th>
        <th
          class="_thCategory_9cd356"
        >
          カテゴリ
        </th>
        <th
          class="_thSource_9cd356"
        >
          ソース
        </th>
        <th
          class="_thActions_9cd356"
        >
          操作
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="_row_9cd356 "
      >
        <td
          class="_tdKey_9cd356"
        >
          <kbd
            class="_keyBadge_9cd356"
          >
            j
          </kbd>
        </td>
        <td
          class="_tdName_9cd356"
        >
          <span
            class="_commandName_9cd356"
          >
            ↓
          </span>
          <span
            class="_description_9cd356"
          >
            下に移動
          </span>
        </td>
        <td
          class="_tdCategory_9cd356"
        >
          <span
            class="_badge_9cd356"
            style="--badge-color: #4fc3f7;"
          >
            移動
          </span>
        </td>
        <td
          class="_tdSource_9cd356"
        >
          <span
            class="_badge_9cd356"
            style="--badge-color: #6c7086;"
          >
            デフォルト
          </span>
        </td>
        <td
          class="_tdActions_9cd356"
        >
          <button
            class="_actionButton_9cd356"
            type="button"
          >
            変更
          </button>
          <button
            class="_actionButton_9cd356 _actionButtonRemove_9cd356"
            type="button"
          >
            削除
          </button>
        </td>
      </tr>
      <tr
        class="_row_9cd356 "
      >
        <td
          class="_tdKey_9cd356"
        >
          <kbd
            class="_keyBadge_9cd356"
          >
            k
          </kbd>
        </td>
        <td
          class="_tdName_9cd356"
        >
          <span
            class="_commandName_9cd356"
          >
            ↑
          </span>
          <span
            class="_description_9cd356"
          >
            上に移動
          </span>
        </td>
        <td
          class="_tdCategory_9cd356"
        >
          <span
            class="_badge_9cd356"
            style="--badge-color: #4fc3f7;"
          >
            移動
          </span>
        </td>
        <td
          class="_tdSource_9cd356"
        >
          <span
            class="_badge_9cd356"
            style="--badge-color: #89b4fa;"
          >
            レイアウト
          </span>
        </td>
        <td
          class="_tdActions_9cd356"
        >
          <button
            class="_actionButton_9cd356"
            type="button"
          >
            変更
          </button>
          <button
            class="_actionButton_9cd356 _actionButtonRemove_9cd356"
            type="button"
          >
            削除
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`BindingEditor > スナップショット > バインディングなしの場合 1`] = `
<div
  class="_container_9cd356"
>
  <div
    class="_header_9cd356"
  >
    <h2
      class="_title_9cd356"
    >
      キーバインディング
    </h2>
    <div
      class="_container_e815f2"
    >
      <span
        class="_label_e815f2"
      >
        Vim mode:
      </span>
      <div
        class="_tabs_e815f2"
      >
        <button
          class="_tab_e815f2 _tabActive_e815f2"
          title="Normal"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            N
          </span>
          <span
            class="_full_e815f2"
          >
            Normal
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Visual"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            V
          </span>
          <span
            class="_full_e815f2"
          >
            Visual
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Op-pending"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            O
          </span>
          <span
            class="_full_e815f2"
          >
            Op-pending
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Insert"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            I
          </span>
          <span
            class="_full_e815f2"
          >
            Insert
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Command-line"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            C
          </span>
          <span
            class="_full_e815f2"
          >
            Command-line
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Select"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            S
          </span>
          <span
            class="_full_e815f2"
          >
            Select
          </span>
        </button>
        <button
          class="_tab_e815f2 "
          title="Terminal"
          type="button"
        >
          <span
            class="_short_e815f2"
          >
            T
          </span>
          <span
            class="_full_e815f2"
          >
            Terminal
          </span>
        </button>
      </div>
    </div>
  </div>
  <p
    class="_empty_9cd356"
  >
    このモードにバインディングはありません
  </p>
</div>
`;
